fix: align homework to virtual elements

--- a/quartz/components/styles/homeworklist.scss
+++ b/quartz/components/styles/homeworklist.scss
@@ -1,5 +1,7 @@
 active-homeworks {
     font-family: var(--headerFont);
+    display: block;
+    padding: 2px 8px;
 
     p {
         padding: 0;
